add mx guarddog link

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
       <p>
         I'm <a href="webstorage/">speaking</a> about web storage tonight at <a href="http://bocoup.eventwax.com/managing-state-with-dom-storage">Bocoup Loft</a>.</p>
     </div>
+    <div>
+      <p>Using MX Guarddog as my <a href="http://www.mxguarddog.com/">junk email filter</a>.</p>
+    </div>
   </div>
 
   <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
